--- a/TestTask/Base.lproj/Main.storyboard
+++ b/TestTask/Base.lproj/Main.storyboard
@@ -1,25 +1,178 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="0KX-yT-n02">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Main View Controller-->
+        <scene sceneID="eUZ-1D-NaM">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <collectionViewController id="oDH-U5-RMn" customClass="TETMainViewController" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="b0k-ut-hLN">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="GpO-Kh-1nb">
+                            <size key="itemSize" width="300" height="400"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="10" minY="10" maxX="10" maxY="10"/>
+                        </collectionViewFlowLayout>
+                        <imageView key="backgroundView" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background1.jpg" id="PZx-Kt-XHm">
+                            <rect key="frame" x="0.0" y="-64" width="600" height="600"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <gestureRecognizers/>
+                            <connections>
+                                <outletCollection property="gestureRecognizers" destination="T9h-pM-znI" appends="YES" id="LFG-pO-ww5"/>
+                            </connections>
+                        </imageView>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" reuseIdentifier="Cell" id="eKN-22-SCH" customClass="TETCollectionViewCell">
+                                <rect key="frame" x="150" y="74" width="300" height="400"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="300" height="400"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <view opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.49999999999999961" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jJd-6O-OJI">
+                                            <rect key="frame" x="0.0" y="0.0" width="300" height="400"/>
+                                            <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                            <userDefinedRuntimeAttributes>
+                                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                    <integer key="value" value="5"/>
+                                                </userDefinedRuntimeAttribute>
+                                                <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                            </userDefinedRuntimeAttributes>
+                                        </view>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" minimumFontSize="10" preferredMaxLayoutWidth="301" translatesAutoresizingMaskIntoConstraints="NO" id="eoa-E2-m5x">
+                                            <rect key="frame" x="0.0" y="300" width="300" height="100"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="eoa-E2-m5x" secondAttribute="height" multiplier="3:1" id="Ar9-3c-LO0"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <nil key="highlightedColor"/>
+                                            <variation key="widthClass=compact" fixedFrame="YES">
+                                                <rect key="frame" x="0.0" y="300" width="300" height="100"/>
+                                            </variation>
+                                            <variation key="heightClass=regular-widthClass=regular" fixedFrame="YES">
+                                                <rect key="frame" x="0.0" y="300" width="300" height="100"/>
+                                            </variation>
+                                        </label>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="infoButton.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="hy3-eV-Lyi">
+                                            <rect key="frame" x="0.0" y="0.0" width="300" height="300"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="hy3-eV-Lyi" secondAttribute="height" multiplier="1:1" id="L4m-av-ogI"/>
+                                            </constraints>
+                                            <variation key="widthClass=compact" fixedFrame="YES">
+                                                <rect key="frame" x="0.0" y="0.0" width="300" height="300"/>
+                                            </variation>
+                                            <variation key="heightClass=regular-widthClass=regular" fixedFrame="YES">
+                                                <rect key="frame" x="0.0" y="0.0" width="300" height="300"/>
+                                            </variation>
+                                        </imageView>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                                <constraints>
+                                    <constraint firstAttribute="trailingMargin" secondItem="hy3-eV-Lyi" secondAttribute="trailing" constant="-8" id="CG3-zX-oGj"/>
+                                    <constraint firstItem="eoa-E2-m5x" firstAttribute="leading" secondItem="eKN-22-SCH" secondAttribute="leadingMargin" constant="-8" id="G4p-yt-wVS"/>
+                                    <constraint firstItem="jJd-6O-OJI" firstAttribute="leading" secondItem="eKN-22-SCH" secondAttribute="leadingMargin" constant="-8" id="Hqf-Ha-G3U"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="jJd-6O-OJI" secondAttribute="trailing" constant="-8" id="IX5-fe-2oX"/>
+                                    <constraint firstAttribute="bottomMargin" secondItem="eoa-E2-m5x" secondAttribute="bottom" constant="-8" id="TjU-h0-OFn"/>
+                                    <constraint firstItem="hy3-eV-Lyi" firstAttribute="top" secondItem="eKN-22-SCH" secondAttribute="topMargin" constant="-8" id="eae-6F-3wS"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="eoa-E2-m5x" secondAttribute="trailing" constant="-8" id="hhn-gG-Ghh"/>
+                                    <constraint firstAttribute="bottomMargin" secondItem="jJd-6O-OJI" secondAttribute="bottom" constant="-8" id="r0c-ib-WQN"/>
+                                    <constraint firstItem="hy3-eV-Lyi" firstAttribute="leading" secondItem="eKN-22-SCH" secondAttribute="leadingMargin" constant="-8" id="xXt-zR-Iu7"/>
+                                    <constraint firstItem="jJd-6O-OJI" firstAttribute="top" secondItem="eKN-22-SCH" secondAttribute="topMargin" constant="-8" id="ys5-GE-Gh3"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="addressLabel" destination="eoa-E2-m5x" id="Yum-Fu-zKd"/>
+                                    <outlet property="mapImage" destination="hy3-eV-Lyi" id="Bi3-2E-4Oq"/>
+                                    <segue destination="8ex-WD-JYf" kind="show" identifier="Details" id="Csy-JF-hw1"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="oDH-U5-RMn" id="l6Z-Cw-3bp"/>
+                            <outlet property="delegate" destination="oDH-U5-RMn" id="tLx-AZ-9ox"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" id="9gk-GS-qUG">
+                        <nil key="title"/>
+                    </navigationItem>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MGs-7J-yIy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="T9h-pM-znI">
+                    <connections>
+                        <action selector="resignKeyboard:" destination="oDH-U5-RMn" id="Sog-MS-fee"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
+            <point key="canvasLocation" x="1197" y="347"/>
+        </scene>
+        <!--Detailed View Controller-->
+        <scene sceneID="Ng1-dy-Ryz">
+            <objects>
+                <viewController id="8ex-WD-JYf" customClass="TETDetailedViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="gs5-cc-pZU"/>
+                        <viewControllerLayoutGuide type="bottom" id="o6C-5O-VQ7"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="J91-tp-ubz">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="FYX-in-FLw">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="0.0" y="64" width="400" height="536"/>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=regular" fixedFrame="YES">
+                                    <rect key="frame" x="0.0" y="64" width="800" height="736"/>
+                                </variation>
+                            </mapView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="FYX-in-FLw" firstAttribute="leading" secondItem="J91-tp-ubz" secondAttribute="leadingMargin" constant="-16" id="6nL-5y-VKn"/>
+                            <constraint firstItem="FYX-in-FLw" firstAttribute="top" secondItem="gs5-cc-pZU" secondAttribute="bottom" id="Iim-Q4-QRl"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="FYX-in-FLw" secondAttribute="trailing" constant="-16" id="WUp-bc-4JP"/>
+                            <constraint firstItem="o6C-5O-VQ7" firstAttribute="top" secondItem="FYX-in-FLw" secondAttribute="bottom" id="fbX-xU-I1X"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="mapView" destination="FYX-in-FLw" id="5ns-EK-MgW"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iFv-c8-xY1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1902" y="346"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="guB-33-VNn">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="0KX-yT-n02" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="m4G-fX-8K9">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="oDH-U5-RMn" kind="relationship" relationship="rootViewController" id="c9O-Tm-GLD"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CEa-Qf-tXF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="447" y="347"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="background1.jpg" width="1500" height="1500"/>
+        <image name="infoButton.jpg" width="500" height="500"/>
+    </resources>
 </document>
